@@ -3,6 +3,7 @@
 - Don't hook the upload hook if APC is disabled (Rasmus)
 - Local shadow cache support (Gopal)
 - Avoid uneccessary loops over op_arrays for "known" auto-globals (Gopal)
+- Fix apc_add() to overwrite timed out user entries (Rasmus)
 
 3.0.13: 2007-02-24
 - File upload progress (Rasmus)
